--- a/style.css
+++ b/style.css
@@ -1,25 +1,26 @@
 body {
-    background-color: silver;
-    padding: 2px;
+    background-color: #1e1f21;
     
 }
 
-.body {
-    padding-top: 20px;
-}
 
 h1 {
+    font-family: Arial, Helvetica, "sans-serif";
     width: 100%;
-    text-align: center;
+    color: white;
+    /* letter-spacing: 2px; */
 }
 
-.welcome {
-    width: 100%;
-    font-family: "Roboto";
-    font-weight: 400;
-    margin-bottom: 4em;
-    font-size: larger;
 
+.welcome {
+    display: block;
+    width: 100%;
+    font-family: "sans-serif";
+    color: #768696;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 35px;
+    
 }
 
 .formBg {
@@ -27,36 +28,79 @@ h1 {
 }
 
 
-.form {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-}
-
-.middle {
-    grid-column: 1 / 3;
-    grid-row: 2 ;
-}
-
 input {
     padding: 10px;
+    margin-bottom: 5px;
     border: 1px solid rgb(170, 166, 166);
     border-radius: 4px;
 }
 
 button {
+    background-color: slateblue;
     display: block;
+    color: white;
     margin: auto;
     margin-top: 20px;
     padding: 10px 32px;
-    border: 1px solid rgb(170, 166, 166);
+    border: none;
     border-radius: 10px;
     transition: 0.4s;
 }
 
 button:hover {
     font-stretch: expanded;
-    background-color: slateblue;
+    /* background-color: slateblue; */
     color: white;
-    /* box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); */
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+.spam {
+    display: block;
+    width: 100%;
+    font-family: "sans-serif";
+    color: #768696;
+    text-align: center;
+}
+
+
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+    .body {
+        width: 500px;
+        margin: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    .form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 20px;
+    }
+    
+    .middle {
+        grid-column: 1 / 3;
+        grid-row: 2 ;
+    }
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 700px) {
+    .form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: auto;
+    }
+
+    h1 {
+    font-size: 50px;
+    }
+}
+
+
