--- a/style.css
+++ b/style.css
@@ -54,6 +54,13 @@ button:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+button:focus {
+    outline: none;
+    border-color: slateblue ;
+    border-radius: 10px;
+    
+}
+
 .spam {
     display: block;
     width: 100%;
@@ -66,9 +73,10 @@ button:hover {
 
 footer {
     text-align: center;
+    margin-top: 30px;
     position: fixed;
     bottom: 0;
-    height: 50px;
+    /* height: 20px; */
     width: 100%;
     color: #768696;
 }
