--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ h1 {
     font-family: Arial, Helvetica, "sans-serif";
     width: 100%;
     color: white;
-    /* letter-spacing: 2px; */
 }
 
 .separator{
@@ -42,11 +41,6 @@ h1 {
     font-weight: 400;    
 }
 
-.formBg {
-    margin: auto;
-}
-
-
 input {
     padding: 10px;
     margin-bottom: 5px;
@@ -72,7 +66,6 @@ button {
 
 button:hover {
     font-stretch: expanded;
-    /* background-color: slateblue; */
     color: white;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
@@ -84,7 +77,7 @@ button:focus {
     
 }
 
-.spam {
+.no-spam {
     display: block;
     width: 100%;
     font-family: "sans-serif";
@@ -99,7 +92,6 @@ footer {
     margin-top: 30px;
     position: fixed;
     bottom: 0;
-    /* height: 20px; */
     width: 100%;
     color: #768696;
 }
@@ -121,7 +113,7 @@ footer {
     line-height: 35px;
     }
 
-    .form {
+    form {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-gap: 20px;
@@ -135,7 +127,7 @@ footer {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 700px) {
-    .form {
+    form {
         display: flex;
         flex-direction: column;
         justify-content: center;
