--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ footer {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
 
-    .body {
+    main {
         width: 500px;
         margin: auto;
     }
