--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 body {
-    background-color: #1e1f21;
-    
+  background-color: #1e1f21;
 }
 
 h1 {
-    font-family: Arial, Helvetica, "sans-serif";
-    width: 100%;
-    color: white;
+  font-family: Arial, Helvetica, 'sans-serif';
+  width: 100%;
+  color: white;
 }
 
-.separator{
-    display: flex;
-    gap: 4px;
+.separator {
+  display: flex;
+  gap: 4px;
 }
 .separator-box {
   width: 20%;
@@ -34,115 +33,109 @@ h1 {
 }
 
 .welcome {
-    display: block;
-    width: 100%;
-    font-family: "sans-serif";
-    color: #768696;
-    font-weight: 400;    
+  display: block;
+  width: 100%;
+  font-family: 'sans-serif';
+  color: #768696;
+  font-weight: 400;
 }
 
 input {
-    padding: 10px;
-    margin-bottom: 5px;
-    border: 1px solid rgb(170, 166, 166);
-    border-radius: 4px;
+  padding: 10px;
+  margin-bottom: 5px;
+  border: 1px solid rgb(170, 166, 166);
+  border-radius: 4px;
 }
 
 input:focus {
-    outline: none;
+  outline: none;
 }
 
 button {
-    background-color: slateblue;
-    display: block;
-    color: white;
-    margin: auto;
-    margin-top: 20px;
-    padding: 10px 32px;
-    border: none;
-    border-radius: 10px;
-    transition: 0.4s;
+  background-color: slateblue;
+  display: block;
+  color: white;
+  margin: auto;
+  margin-top: 20px;
+  padding: 10px 32px;
+  border: none;
+  border-radius: 10px;
+  transition: 0.4s;
 }
 
 button:hover {
-    font-stretch: expanded;
-    color: white;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  font-stretch: expanded;
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 button:focus {
-    outline: none;
-    border-color: slateblue ;
-    border-radius: 10px;
-    
+  outline: none;
+  border-color: slateblue;
+  border-radius: 10px;
 }
 
 .no-spam {
-    display: block;
-    width: 100%;
-    font-family: "sans-serif";
-    color: #768696;
-    text-align: center;
+  display: block;
+  width: 100%;
+  font-family: 'sans-serif';
+  color: #768696;
+  text-align: center;
 }
 
-
-
 footer {
-    text-align: center;
-    margin-top: 30px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    color: #768696;
+  text-align: center;
+  margin-top: 30px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  color: #768696;
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  main {
+    width: 500px;
+    margin: auto;
+  }
 
-    main {
-        width: 500px;
-        margin: auto;
-    }
+  h1 {
+    text-align: center;
+  }
 
-    h1 {
-        text-align: center;
-    }
-
-    .welcome {
+  .welcome {
     font-size: 30px;
     line-height: 35px;
-    }
+  }
 
-    form {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 20px;
-    }
-    
-    .middle {
-        grid-column: 1 / 3;
-        grid-row: 2 ;
-    }
+  form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+  }
+
+  .middle {
+    grid-column: 1 / 3;
+    grid-row: 2;
+  }
 }
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 700px) {
-    form {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin: auto;
-    }
+  form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+  }
 
-    h1 {
+  h1 {
     font-size: 50px;
-    }
+  }
 
-    .welcome {
-        font-size: 20px;
-        line-height: 25px;
-        letter-spacing: larger;
-        }
+  .welcome {
+    font-size: 20px;
+    line-height: 25px;
+    letter-spacing: larger;
+  }
 }
-
-
