--- a/style.css
+++ b/style.css
@@ -8,14 +8,6 @@ h1 {
   color: white;
 }
 
-.separator {
-  display: flex;
-  gap: 4px;
-}
-.separator-box {
-  width: 20%;
-  height: 3px;
-}
 
 .welcome {
   display: block;
@@ -46,8 +38,8 @@ button {
   border: none;
   border-radius: 10px;
   transition: 0.4s;
-  grid-column: 2 / 3;
-  justify-self: end;
+  grid-column: 1 / 3;
+  justify-self: center;
 }
 
 button:hover {
@@ -81,10 +73,10 @@ footer {
 
 #submitted {
   display: none;
-  /* border-top: 2px dashed #768696; */
+  color: #768696;
   font-family: 'sans-serif';
-  color: aliceblue;
-    font-size: 2rem;
+  font-weight: 400;
+
   }
   
   /* Medium devices (landscape tablets, 768px and up) */
@@ -99,11 +91,12 @@ footer {
   }
 
   .card {
-    background-color: #181c30;
+    /* background-color: #181c30; */
     padding: 10px;
+    border-radius: 10px
   }
   
-  .welcome {
+  .welcome, #submitted {
     font-size: 30px;
     line-height: 35px;
   }
@@ -118,6 +111,7 @@ footer {
     grid-column: 1 / 3;
     grid-row: 2;
   }
+
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -133,12 +127,23 @@ footer {
     font-size: 50px;
   }
   
-  .welcome {
+  .welcome, #submitted {
     font-size: 20px;
     line-height: 25px;
     letter-spacing: larger;
   }
 }
+
+
+/* .separator {
+  display: flex;
+  gap: 4px;
+}
+.separator-box {
+  width: 20%;
+  height: 3px;
+} */
+
 
 /* for the seperator */
 /* .pink {
